[package]
name = "vauxl_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Database (Encrypted SQLite)
# Note: In a real environment, you'd ensure 'bundled-sqlcipher' or similar is configured
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptography & MLS
# openmls = "0.5" # Placeholder: Verify latest version compatible with RFC 9420
ed25519-dalek = "2.1"
rand = "0.8"
argon2 = "0.5"

uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

# FFI Bridge
flutter_rust_bridge = "2.0.0-dev.32"
base64 = "0.22.1"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
